argo-rollouts/canary/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: canary
spec:
  replicas: 5
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: 
            duration: 10s
        - setWeight: 40
        - pause:
            duration: 10s
        - setWeight: 60
        - pause: 
            duration: 10s
        - setWeight: 80
        - pause:
            duration: 10s
        - setWeight: 100
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:green
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: "100m"
              memory: "200Mi"
            requests:
              cpu: "60m"
              memory: "120Mi"
