argo-rollouts/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
  namespace: canary
spec:
  ports:
  - port: 8080           # The port exposed by the service
    targetPort: 8080     # The port your application listens on
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
